--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 to deploy your nfts go to :
-bicryptoV5.5\backend\ecosystem\smart-contracts\nft\.env.example
+bicryptoV5.5\backend\ecosystem\smart-contracts\nft\.env
 
 # Private key for contract deployment (DO NOT COMMIT REAL KEY)
 PRIVATE_KEY=your_private_key_here
